[package]
name = "database-engine"
version = "0.1.0"
edition = "2021"
description = "Nexus Database Engine — pluggable storage engine with B-Tree + LSM-Tree"

[dependencies]
serde = { version = "1", features = ["derive"] }
bincode = "1"
thiserror = "2"
parking_lot = "0.12"
log = "0.4"

[dev-dependencies]
tempfile = "3"
