[package]
name = "database-engine"
version = "0.1.0"
edition = "2021"
description = "Nexus Database Engine — pluggable storage engine with B-Tree + LSM-Tree"

[dependencies]
bincode = "1"
thiserror = "2"
parking_lot = "0.12"
log = "0.4"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fastrand = "2"

[dev-dependencies]
tempfile = "3"
