[package]
name = "database-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "database_server"
path = "src/lib.rs"

[[bin]]
name = "nexus-database"
path = "src/main.rs"

[dependencies]
database-core = { path = "../database-core" }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
dotenvy = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
reqwest = { workspace = true }
database-engine = { path = "../database-engine" }

[dev-dependencies]
tokio-test = { workspace = true }
tower = { workspace = true }
http-body-util = { workspace = true }
