cmake_minimum_required(VERSION 3.28)
find_package(SDL2 REQUIRED)
add_executable(nexus_modeler nexus_modeler.cpp)
target_include_directories(nexus_modeler PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../../src/kernel/src)
target_link_libraries(nexus_modeler PRIVATE nexus_softrast nexus_gfx_core SDL2::SDL2)
target_compile_features(nexus_modeler PRIVATE cxx_std_26)
if(NOT MSVC)
    target_compile_options(nexus_modeler PRIVATE -Wall -Wextra -Wpedantic)
endif()
add_test(NAME ModelerOffscreenSmoke COMMAND nexus_modeler --offscreen --frames 5)
set_tests_properties(ModelerOffscreenSmoke PROPERTIES LABELS "modeler;smoke" TIMEOUT 30 ENVIRONMENT "SDL_VIDEODRIVER=offscreen")

# DHT render tool
add_executable(dht_render /run/media/zajferx/Data/dev/The-No-hands-Company/projects/Nexus-Systems/dhts/dht_nexus_debug/dht_render.cpp)
target_include_directories(dht_render PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../../src/kernel/src)
target_link_libraries(dht_render PRIVATE nexus_softrast nexus_gfx_core)
target_compile_features(dht_render PRIVATE cxx_std_26)
if(NOT MSVC)
    target_compile_options(dht_render PRIVATE -Wall -Wextra)
endif()
